RET-3675. RET-3397. Fix application properties (#1035)