@@ -12,7 +12,6 @@ import uk.gov.hmcts.ecm.common.helpers.UtilHelper;
 import uk.gov.hmcts.et.common.model.bulk.types.DynamicFixedListType;
 import uk.gov.hmcts.et.common.model.bulk.types.DynamicValueType;
 import uk.gov.hmcts.et.common.model.ccd.CaseData;
-import uk.gov.hmcts.et.common.model.ccd.CaseDetails;
 import uk.gov.hmcts.et.common.model.ccd.items.DateListedTypeItem;
 import uk.gov.hmcts.et.common.model.ccd.items.DocumentTypeItem;
 import uk.gov.hmcts.et.common.model.ccd.items.HearingTypeItem;
@@ -40,10 +39,10 @@ import static uk.gov.hmcts.ecm.common.model.helper.Constants.CONCILIATION_TRACK_
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.CONCILIATION_TRACK_NO_CONCILIATION;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.YES;
 import static uk.gov.hmcts.ethos.replacement.docmosis.constants.NotificationServiceConstants.CASE_NUMBER;
-import static uk.gov.hmcts.ethos.replacement.docmosis.constants.NotificationServiceConstants.CCD_ID;
 import static uk.gov.hmcts.ethos.replacement.docmosis.constants.NotificationServiceConstants.CLAIMANT;
 import static uk.gov.hmcts.ethos.replacement.docmosis.constants.NotificationServiceConstants.DATE;
 import static uk.gov.hmcts.ethos.replacement.docmosis.constants.NotificationServiceConstants.EMAIL_FLAG;
+import static uk.gov.hmcts.ethos.replacement.docmosis.constants.NotificationServiceConstants.LINK_TO_EXUI;
 import static uk.gov.hmcts.ethos.replacement.docmosis.constants.NotificationServiceConstants.RESPONDENTS;
 
 @Slf4j
@@ -435,7 +434,7 @@ public final class ReferralHelper {
                 .map(r -> DynamicValueType.create(
                         r.getValue().getReferralNumber(),
                         r.getValue().getReferralNumber() + " " + r.getValue().getReferralSubject()))
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     /**
@@ -524,14 +523,14 @@ public final class ReferralHelper {
     /**
      * Generates a map of personalised information that will be used for the
      * placeholder fields in the Referral email template.
-     * @param detail Contains all the case details.
+     * @param caseData Contains all the case data.
      * @param referralNumber The number of the referral.
      * @param username Name of the user making or replying to this referral.
+     * @param linkToExui link to Exui with the caseId as a parameter
      * @param isNew Flag for if this is a new referral.
      */
-    public static Map<String, String> buildPersonalisation(CaseDetails detail, String referralNumber, boolean isNew,
-                                                           String username) {
-        CaseData caseData = detail.getCaseData();
+    public static Map<String, String> buildPersonalisation(CaseData caseData, String referralNumber, boolean isNew,
+                                                           String username, String linkToExui) {
         Map<String, String> personalisation = new ConcurrentHashMap<>();
         personalisation.put(CASE_NUMBER, caseData.getEthosCaseReference());
         personalisation.put(EMAIL_FLAG, getEmailFlag(isNew ? caseData.getIsUrgent() : caseData.getIsUrgentReply()));
@@ -543,7 +542,7 @@ public final class ReferralHelper {
         personalisation.put("subject", getReferralSubject(caseData, isNew));
         personalisation.put("username", username);
         personalisation.put("replyReferral", isNew ? REPLY_REFERRAL_REF : REPLY_REFERRAL_REP);
-        personalisation.put(CCD_ID, detail.getCaseId());
+        personalisation.put(LINK_TO_EXUI, linkToExui);
         return personalisation;
     }
 
