@@ -17,7 +17,6 @@ import uk.gov.hmcts.et.common.model.ccd.types.DocumentType;
 import uk.gov.hmcts.et.common.model.ccd.types.RespondentSumType;
 import uk.gov.hmcts.et.common.model.ccd.types.SendNotificationType;
 import uk.gov.hmcts.et.common.model.ccd.types.SendNotificationTypeItem;
-import uk.gov.hmcts.ethos.replacement.docmosis.config.NotificationProperties;
 import uk.gov.hmcts.ethos.replacement.docmosis.helpers.NotificationHelper;
 import uk.gov.hmcts.ethos.replacement.docmosis.service.hearings.HearingSelectionService;
 
@@ -28,7 +27,6 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import static com.google.common.base.Strings.isNullOrEmpty;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.CLAIMANT_ONLY;
@@ -46,7 +44,6 @@ import static uk.gov.hmcts.ethos.replacement.docmosis.helpers.Helper.createLinkF
 public class SendNotificationService {
     private final HearingSelectionService hearingSelectionService;
     private final EmailService emailService;
-    private final NotificationProperties notificationProperties;
     @Value("${sendNotification.template.id}")
     private String sendNotificationTemplateId;
 
@@ -54,21 +51,23 @@ public class SendNotificationService {
 
     private static final String POPULATED_DOCUMENT_MARKDOWN = "| Document |%s|\r\n| Description |%s|";
 
-    private static final String NOTIFICATION_DETAILS = "|  | |\r\n"
-             + "| --- | --- |\r\n"
-             + "| Subject | %1$s |\r\n"
-             + "| Notification | %2$s |\r\n"
-             + "| Hearing | %3$s |\r\n"
-             + "| Date Sent | %4$s |\r\n"
-             + "| Sent By | %5$s  |\r\n"
-             + "| Case management order or request | %6$s |\r\n"
-             + "| Response due | %7$s |\r\n"
-             + "| Party or parties to respond | %8$s |\r\n"
-             + "| Additional Information | %9$s |\r\n"
-             + " %10$s\r\n"
-             + "| Case management order made by | %11$s |\r\n"
-             + "| Name | %12$s |\r\n"
-             + "| Sent to | %8$s |\r\n";
+    private static final String NOTIFICATION_DETAILS = """
+        |  | |\r
+        | --- | --- |\r
+        | Subject | %1$s |\r
+        | Notification | %2$s |\r
+        | Hearing | %3$s |\r
+        | Date Sent | %4$s |\r
+        | Sent By | %5$s  |\r
+        | Case management order or request | %6$s |\r
+        | Response due | %7$s |\r
+        | Party or parties to respond | %8$s |\r
+        | Additional Information | %9$s |\r
+         %10$s\r
+        | Case management order made by | %11$s |\r
+        | Name | %12$s |\r
+        | Sent to | %8$s |\r
+        """;
 
     public void populateHearingSelection(CaseData caseData) {
         DynamicFixedListType dynamicFixedListType = new DynamicFixedListType();
@@ -163,7 +162,7 @@ public class SendNotificationService {
         return sendNotificationTypeItemList.stream()
             .map(sendNotificationType -> DynamicValueType.create(sendNotificationType.getId(),
                 format.apply(sendNotificationType)))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     /**
@@ -173,18 +172,18 @@ public class SendNotificationService {
      * @param caseDetails Details of the case
      */
     public void sendNotifyEmails(CaseDetails caseDetails) {
-
         CaseData caseData = caseDetails.getCaseData();
-
         String claimantEmailAddress = caseData.getClaimantType().getClaimantEmailAddress();
+        String caseId = caseDetails.getCaseId();
+
         if (!RESPONDENT_ONLY.equals(caseData.getSendNotificationNotify()) && !isNullOrEmpty(claimantEmailAddress)) {
             emailService.sendEmail(sendNotificationTemplateId, claimantEmailAddress,
-                buildPersonalisation(caseDetails, notificationProperties.getCitizenUrl()));
+                buildPersonalisation(caseDetails, emailService.getCitizenCaseLink(caseId)));
         }
 
         if (!CLAIMANT_ONLY.equals(caseData.getSendNotificationNotify())) {
             Map<String, String> personalisation = buildPersonalisation(caseDetails,
-                    notificationProperties.getExuiUrl());
+                    emailService.getExuiCaseLink(caseId));
             List<RespondentSumTypeItem> respondents = caseData.getRespondentCollection();
             respondents.forEach(obj -> sendRespondentEmail(caseData, personalisation, obj.getValue()));
         }
@@ -214,7 +213,7 @@ public class SendNotificationService {
         List<String> documents = sendNotification.getSendNotificationUploadDocument().stream()
                 .map(documentTypeItem ->
                         getSendNotificationSingleDocumentMarkdown(documentTypeItem.getValue()))
-                .collect(Collectors.toList());
+                .toList();
         return String.join("\r\n", documents);
     }
 
@@ -247,9 +246,6 @@ public class SendNotificationService {
     }
 
     private Map<String, String> buildPersonalisation(CaseDetails caseDetails, String envUrl) {
-        return Map.of(
-                CASE_NUMBER, caseDetails.getCaseData().getEthosCaseReference(),
-            "environmentUrl", envUrl + caseDetails.getCaseId()
-        );
+        return Map.of(CASE_NUMBER, caseDetails.getCaseData().getEthosCaseReference(), "environmentUrl", envUrl);
     }
 }
